[gd_scene load_steps=3 format=3 uid="uid://hkrnyjxeexe2"]

[ext_resource type="Script" uid="uid://d703afqsbbp7" path="res://Collections/c_World/World.gd" id="1_gfwas"]

[sub_resource type="TileSet" id="TileSet_gmhvb"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Red Walls"
terrain_set_0/terrain_0/color = Color(0.988235, 0.498039, 0.498039, 1)

[node name="nde2_World" type="Node2D"]
script = ExtResource("1_gfwas")

[node name="nde2_Cam_Limits" type="Node2D" parent="."]

[node name="nde2_Top_Left" type="Node2D" parent="nde2_Cam_Limits"]
position = Vector2(-800, -400)

[node name="nde2_Bottom_Right" type="Node2D" parent="nde2_Cam_Limits"]
position = Vector2(1184, 496)

[node name="nde2_Tilemaps" type="Node2D" parent="."]

[node name="tml2_World" type="TileMapLayer" parent="nde2_Tilemaps"]
tile_set = SubResource("TileSet_gmhvb")
